# h3c-to-sgbox-translation

./: README.md  fake_sgbox.py  generate_certs.sh  install.sh  pyproject.toml  requirements.txt  spoof_test.py  test.config  translator.config
debian/: changelog  control  rules
docs/: API-Reference.md  BUG_AUDIT_REPORT.md  Configuration.md  Field-Mapping.md  Home.md  Installation.md  SGBox-Integration.md  Security-and-Encryption.md  Troubleshooting.md  _Sidebar.md
h3c-sgbox-translator/: README.md  install.sh  translator.config
h3c-sgbox-translator/debian/: install
h3c-sgbox-translator/docs/: API-Reference.md  Configuration.md  Home.md  Installation.md  SGBox-Integration.md  Security-and-Encryption.md  Troubleshooting.md
h3c-sgbox-translator/src/: __init__.py  api_server.py  formatter.py  parser.py  syslog_forwarder.py  syslog_output_server.py  syslog_receiver.py  translator.py
h3c-sgbox-translator/systemd/: h3c-translator.service
h3c-sgbox-translator/tests/: test_formatter.py
src/: __init__.py  __main__.py  api_server.py  encryption.py  formatter.py  parser.py  syslog_forwarder.py  syslog_output_server.py  syslog_receiver.py  translator.py
tests/: stress_test_api.py  test_formatter_cef.py  test_integration.py  test_parallel_transport.py  test_parser.py  test_syslog_forwarder.py
